--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "dependencies": {
     "next": "9.5.5",
     "next-images": "^1.6.0",
+    "next-on-netlify": "^2.5.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "styled-components": "^5.2.0"
